--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -3,11 +3,29 @@ name: time-tracker
 services:
   postgres:
     image: postgres:16
-    container_name: time-tracker-postgres-conteiner
+    container_name: time-tracker-postgres-container
     environment:
       POSTGRES_DB: time-tracker
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - "5431:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     restart: always
+
+  backend:
+    build: .
+    container_name: time-tracker-backend
+    depends_on:
+      - postgres
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/time-tracker
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    restart: always
+
+volumes:
+  postgres_data:
