--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-apexcharts": "^1.9.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7"
