--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.18",
     "apexcharts": "^5.3.6",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
