fix(backend): muda ids da entidades de Long para UUID

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -28,3 +28,7 @@ server:
 jwt:
   secret: your-secret-key-change-in-production-moura-tech-2026
   expiration: 86400
+
+springdoc:
+  swagger-ui:
+    tags-sorter: alpha
