Fix: ajuste de porta do Vite e configurações de segurança para deploy

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -3,16 +3,16 @@ spring:
     name: time-tracker
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/time-tracker
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://moura-time-db.postgres.database.azure.com:5432/postgres
+    username: db_moura
+    password: Time066@
     driver-class-name: org.postgresql.Driver
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 
   flyway:
     enabled: true
