Fix: alterando URL da API nos arquivos de ambiente

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,1 @@
-VITE_SHIFT_MINUTES=480
-VITE_API_URL=http://localhost:8080
+VITE_API_URL=https://moura-time-tracker-backend.agreeablesmoke-e6c0870a.brazilsouth.azurecontainerapps.io
